# HIVMAT

./: CMakeLists.txt  README.md
GRAPHS/: CMakeLists.txt  N3CH_yline.csv  N3_xline.csv  N3_yline.csv  N4CH_yline.csv  N4_yline.csv  N5CH_yline.csv  N5_yline.csv  NUM_DIF_N3_Xdata.csv  NUM_DIF_N3_Ydata.csv  NUM_DIF_N4_Ydata.csv  NUM_DIF_N5_Ydata.csv  NUM_INTEGRATE_N3_1_Xdata.csv  NUM_INTEGRATE_N3_1_Ydata.csv  NUM_INTEGRATE_N3_2_Ydata.csv  interpolant_tests.cpp  num_diff_tests.cpp
Google_tests/docs/: advanced.md  gmock_cheat_sheet.md  gmock_cook_book.md
Google_tests/docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
SOURCES/: CMakeLists.txt  GAYSS.hpp  integrator.hpp  interpolant.hpp  num_dif.hpp  picatelonlain.hpp
TESTS/: integratoror_tests.cpp
